# kafka-http-monitor

./: .gitignore  Dockerfile  README.md  consumer_config.json  producer_config.json  pyproject.toml  setup.py
.github/workflows/: python-app.yml
config/: logger.py  schema.py
db/: base_database.py  postgres_db.py
metrics_collector/: base_metric_collector.py  http_metric_collector.py
service/: cli_runners.py  start_consumer.py  start_producer.py  util.py
tests/db/: test_postgres_db.py
tests/fixtures/: test_invalid_consumer_config.json  test_invalid_producer_config.json
tests/service/: test_cli_runners.py  test_util.py
tests/transport/: test_kafka_transport.py
transport/: base_transport.py  kafka_transport.py
