[tool.poetry]
name = "kafka-http-monitor"
version = "0.1.0"
description = ""
authors = ["mrinmoy ghosal <techkiddy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
confluent-kafka = "^1.5.0"
postgres = "^3.0.0"
argparse = "^1.4.0"
APScheduler = "^3.6.3"
aiohttp = "^3.7.2"
jsonschema = "^3.2.0"
pytest = "^6.1.2"
pytest-mock = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
